feat(backend): enhance product, cart, order and payment services