@@ -21,7 +21,7 @@ import com.buildwithrani.backend.auth.repository.UserRepository;
 import com.buildwithrani.backend.auth.security.SecurityUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -39,6 +39,7 @@ public class ProductServiceImpl implements ProductService {
     @Override
     @Audit(action = "PRODUCT_CREATED", entityType = "PRODUCT")
     public ProductResponseDTO createProduct(ProductRequestDTO request, MultipartFile image) {
+
         String imageUrl = null;
         if (image != null && !image.isEmpty()) {
             imageUrl = cloudinaryService.uploadImage(image);
@@ -51,17 +52,20 @@ public class ProductServiceImpl implements ProductService {
                 .featured(Boolean.TRUE.equals(request.getFeatured()))
                 .status(ProductStatus.INACTIVE)
                 .imageUrl(imageUrl)
+                .stock(request.getStock())
                 .build();
 
         product.applyDiscount(request.getDiscountPercentage());
-        Product savedProduct = productRepository.save(product);
 
-        return productMapper.toResponse(savedProduct);
+        productRepository.save(product);
+
+        return productMapper.toResponse(product);
     }
 
     @Override
     @Audit(action = "PRODUCT_UPDATED", entityType = "PRODUCT")
     public ProductResponseDTO updateProduct(Long id, ProductRequestDTO request, MultipartFile image) {
+
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
 
@@ -69,23 +73,27 @@ public class ProductServiceImpl implements ProductService {
             throw new InvalidStateException("Discontinued products cannot be modified");
         }
 
-        product.setName(request.getName());
-        product.setDescription(request.getDescription());
-        product.setPrice(request.getPrice());
-        product.applyDiscount(request.getDiscountPercentage());
-        product.setFeatured(Boolean.TRUE.equals(request.getFeatured()));
+        String finalImageUrl = product.getImageUrl();
 
         if (image != null && !image.isEmpty()) {
-            String imageUrl = cloudinaryService.uploadImage(image);
-            product.setImageUrl(imageUrl);
+            finalImageUrl = cloudinaryService.uploadImage(image);
         }
 
-        Product updated = productRepository.save(product);
-        return productMapper.toResponse(updated);
+        product.updateDetails(
+                request.getName(),
+                request.getDescription(),
+                request.getPrice(),
+                request.getDiscountPercentage(),
+                Boolean.TRUE.equals(request.getFeatured()),
+                finalImageUrl
+        );
+
+        return productMapper.toResponse(product);
     }
 
     @Override
     public void updateProductStatus(Long productId, ProductStatus status) {
+
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
 
@@ -96,13 +104,12 @@ public class ProductServiceImpl implements ProductService {
         ProductStatus previousStatus = product.getStatus();
         if (previousStatus == status) return;
 
-        product.setStatus(status);
-        productRepository.save(product);
+        product.changeStatus(status);
 
-        // Professional Metadata Logging
         String adminEmail = SecurityUtils.getCurrentUserEmail();
-        Long adminId = (adminEmail != null) ?
-                userRepository.findByEmail(adminEmail).map(User::getId).orElse(null) : null;
+        Long adminId = (adminEmail != null)
+                ? userRepository.findByEmail(adminEmail).map(User::getId).orElse(null)
+                : null;
 
         String metadata = String.format("{\"old\":\"%s\", \"new\":\"%s\"}", previousStatus, status);
 
@@ -112,40 +119,66 @@ public class ProductServiceImpl implements ProductService {
                 "PRODUCT_STATUS_CHANGE",
                 "PRODUCT",
                 product.getId(),
-                metadata // Added 6th argument
+                metadata
         );
     }
 
     @Override
     @Audit(action = "PRODUCT_FEATURED_TOGGLE", entityType = "PRODUCT")
     public void updateFeaturedStatus(Long productId, boolean featured) {
+
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
 
         if (product.getStatus() == ProductStatus.DISCONTINUED) {
             throw new InvalidStateException("Discontinued products cannot be modified");
         }
-        product.setFeatured(featured);
-        productRepository.save(product);
+
+        product.updateFeatured(featured);
+    }
+
+    // -------- INVENTORY MANAGEMENT --------
+
+    @Override
+    public void increaseStock(Long productId, int quantity) {
+
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
+
+        product.increaseStock(quantity);
+    }
+
+    @Override
+    public void decreaseStock(Long productId, int quantity) {
+
+        Product product = productRepository.findById(productId)
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
+
+        product.reduceStock(quantity);
     }
 
     // -------- USER / READ ONLY --------
 
     @Override
+    @Transactional(readOnly = true)
     public List<ProductResponseDTO> getAllProducts() {
         return productRepository.findAll().stream()
                 .map(productMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ProductResponseDTO> getActiveProducts() {
-        return productRepository.findByStatusOrderByCreatedAtDesc(ProductStatus.ACTIVE).stream()
+        return productRepository
+                .findByStatusOrderByCreatedAtDesc(ProductStatus.ACTIVE)
+                .stream()
                 .map(productMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ProductResponseDTO getProductById(Long productId) {
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
@@ -153,16 +186,22 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ProductResponseDTO> getFeaturedProducts() {
-        return productRepository.findTop5ByFeaturedTrueAndStatusOrderByCreatedAtDesc(ProductStatus.ACTIVE).stream()
+        return productRepository
+                .findTop5ByFeaturedTrueAndStatusOrderByCreatedAtDesc(ProductStatus.ACTIVE)
+                .stream()
                 .map(productMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ProductResponseDTO> getNewArrivals() {
-        return productRepository.findTop5ByStatusOrderByCreatedAtDesc(ProductStatus.ACTIVE).stream()
+        return productRepository
+                .findTop5ByStatusOrderByCreatedAtDesc(ProductStatus.ACTIVE)
+                .stream()
                 .map(productMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
